# st_table_demo

./: .gitignore  Wedding Values.xlsx  all.xlsx  all_info.xlsx  all_info.xlsx_20250331_020425.xlsx  all_info.xlsx_20250331_030030.xlsx  all_info_20250412%.xlsx  all_info_20250413022147.xlsx  all_info_20250413024614.xlsx  all_info_20250413151729.xlsx  all_info_gemini_20250413160430.xlsx  all_info_openai_20250413153932.xlsx  custom_output.md  df_4.5_preview.csv  df_4o.csv  final_demo_venues_data.csv  final_demo_venues_data.xlsx  main.py  pipeline_pdf2excel.py  process_venues.py  pyproject.toml  requirements.txt  robert.ipynb  robert.py  robert2.ipynb  search_pdfs.py  streamlit_aggrid.py  summary  test gemini.ipynb  test.ipynb  test.py  test_docling_output.py  test_ocr.ipynb  test_tesseract.ipynb  venue_info_test copy 2.csv  venue_info_test copy.csv  venue_info_test.csv  venues_data.csv  venues_data_2025_03_09.csv  wedding_venue.xlsx_20250330_185931.xlsx  (+4 more)
old/: robert.ipynb  robert2.ipynb  structuredData.json  test copy.ipynb  test_ocr.ipynb
old_data/: Wedding Values.xlsx  wedding_venue.xlsx  wedding_venue.xlsx_20250330_232609.xlsx  wedding_venue.xlsx_20250330_233109.xlsx  wedding_venue.xlsx_20250331_013436.xlsx  wedding_venue.xlsx_20250412_211936.xlsx
old_data/output/: all_wedding_venues.xlsx  final_demo_venues_data.xlsx  food_bar_summary_20250330_033625.csv  food_bar_summary_20250330_133027.csv  food_bar_summary_20250330_133358.csv  food_bar_summary_20250330_134323.csv  food_bar_summary_20250330_174208.csv  wedding_venue.xlsx  wedding_venue.xlsx_20250330_182112.xlsx
old_data/test_md/: Agua Hedionda Nature Center.md
old_data/venue_md/: Alcazar Palm Springs.md  a.o.c. Brentwood.md
output/: all.xlsx  all_wedding_venues_complex.xlsx  df_4omini.csv  final_demo_venues_data.xlsx  final_demo_venues_data_p.xlsx  food_bar_summary_20250330_174037.csv  wedding_venue.xlsx_20250330_182114.xlsx
test_adobe_output/: structuredData.json
test_md/: Aliso Viejo Country Club.md  Aliso Viejo Wedgewood.md  Almansor Court.md
venue_md/: 94th Aero Squadron Restaurant_.md  Ace Hotel Palm Springs.md
(+234 files in other folders)
