[project]
name = "wedding-venues"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfservices-sdk==4.1.0",
]

[tool.uv.workspace]
members = ["docling", "mistral"]

[tool.uv.sources]
wedding-venues = { workspace = true }

[dependency-groups]
dev = [
    "wedding-venues",
]
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["wedding_venues"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
