[project]
name = "wedding-venues"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "openai>=1.72.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfservices-sdk==4.1.0",
]

[tool.uv.workspace]
members = ["docling", "mistral"]

[tool.uv.sources]
wedding-venues = { workspace = true }

[dependency-groups]
dev = [
    "wedding-venues",
]
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["wedding_venues"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
