[project]
name = "wedding-venues"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling==2.30",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.1.0",
    "google-genai>=1.10.0",
    "ipykernel>=6.29.5",
    "openai>=1.72.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytesseract>=0.3.13",
    "scikit-learn==1.5.2",
]

[tool.uv.workspace]
members = ["docling", "mistral"]

[tool.uv.sources]
wedding-venues = { workspace = true }

[dependency-groups]
dev = [
    "wedding-venues",
]
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["wedding_venues"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
